src/test/resources/arp/invalid/arp_nonlinear_rdc.sil
field f: Int

method foo(x: Ref)
requires acc(x.f, rdc(1)*rdc(4))
ensures acc(x.f, rdc(4)*rdc(1))
{
}